# email-manager

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.sh  docker-compose.yml  postman_collection.json  postman_environment.json  test_mfa.rs  test_mfa_detection.sh
.cargo/: audit.toml
.github/workflows/: rust.yml
config/: README.md
docs/plans/: 2024-02-26-gmail-api-design.md  2024-02-26-gmail-api-implementation.md
src/: config.rs  errors.rs  lib.rs  main.rs  models.rs
src/auth/: oauth2.rs
src/handlers/: emails.rs  mod.rs
src/middleware/: auth.rs
src/services/: connection_pool.rs  email_cache.rs  gmail.rs  imap_service.rs  mfa_extractor.rs  mod.rs  scoring.rs
tests/: api_test.rs  gmail_operations_test.rs  gmail_service_test.rs  integration_test.rs  mfa_extractor_test.rs  models_test.rs  scoring_test.rs
