[package]
name = "email-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Removing Gmail API dependencies, using IMAP instead
# google-gmail1 = "5"
# yup-oauth2 = "8"
imap = "2.4"
native-tls = "0.2"
mailparse = "0.14"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
config = "0.14"

[dev-dependencies]
actix-rt = "2"
mockall = "0.12"
